feat: change about content

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -10,10 +10,9 @@ Hey, welcome to my porfolio website and personal blog!
 
 I'm a Senior Software Engineer at [Walmart Global Tech.](https://tech.walmart.com/content/walmart-global-tech/en_us.html) My linkedin profile can be viewed [here](https://www.linkedin.com/in/amanmakesart/).
 
-This website is a home for my writing, web-projects and artwork. I write prose, poetry and make blog-type posts about things I find fascinating.
+This website is a home for my writing, web-projects and artwork. I write poetry, short stories and make blog posts about things I find fascinating. When not trying to make something new, I like playing chess and listening to music.
 
-This portfolio is built with **Next.js** and a library called [Nextra](https://nextra.vercel.app/).
-When not trying to make something new, I like playing chess and listening to music.
+This portfolio is built with **Next.js** and a library called [Nextra](https://nextra.vercel.app/). The source code for this website can be viewed [here](https://github.com/amangrg/web-portfolio).
 
 ---
 
