--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -8,7 +8,9 @@ date: 2021-03-19
 
 Hey, welcome to my porfolio website and personal blog!
 
-I'm a Senior Software Engineer at [Walmart Global Tech.](https://tech.walmart.com/content/walmart-global-tech/en_us.html) My linkedin profile can be viewed [here](https://www.linkedin.com/in/amanmakesart/).
+I'm Aman Garg, an ex-Senior dev currently pursuing an MS degree at Georgia Institute of Technology in Computational Science and Engineering. My linkedin profile can be viewed [here](https://www.linkedin.com/in/amanmakesart/). My primary motivation in pursuing this interdisciplinary degree was learning scientific machine learning techniques.
+
+I am looking for Summer 2025 software dev/ ML internships in the US. If you have any leads for me do reach out at aman.garg@gatech.edu
 
 This website is a home for my writing, web-projects and artwork. I write poetry, short stories and make blog posts about things I find fascinating. When not trying to make something new, I like playing chess and listening to music.
 
