--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,22 +1,118 @@
 ---
 type: page
-title: About
+title: Home
 date: 2021-03-19
 ---
 
-# Aman Garg
+<section className="hero">
+  <span className="hero__badge">MS CSE @ Georgia Tech · Full-Stack Engineer</span>
+  <h1>Designing immersive digital experiences powered by data.</h1>
+  <p>
+    I'm Aman Garg, a full-stack engineer and machine learning practitioner with 5+ years of
+    experience shipping resilient products across cloud, web, and AI. I build systems that feel
+    effortless for users&mdash;from microfrontends that reach millions of Walmart shoppers to deep
+    learning pipelines reconstructing 3D microscopy in the cloud.
+  </p>
+  <div className="hero__actions">
+    <a className="button" href="/projects">Explore my projects</a>
+    <a className="button button--secondary" href="mailto:aman.garg@gatech.edu">Let's collaborate</a>
+  </div>
+</section>
 
-Hey, welcome to my porfolio website and personal blog!
+<section className="section section--surface">
+  <div className="section__headline">
+    <h2>About Me</h2>
+    <p>
+      Currently at Georgia Tech honing computational science chops, I translate research-backed
+      insights into human-centered products. Previously at Walmart and Siemens, I led engineering
+      efforts that modernized legacy ecosystems, accelerated releases from months to days, and
+      supported multimillion-dollar contracts. I thrive in interdisciplinary teams where ML models,
+      cloud architecture, and design thinking intersect to solve challenging problems.
+    </p>
+  </div>
+  <div className="feature-grid">
+    <article className="feature-card">
+      <h3>Cloud &amp; AI at Scale</h3>
+      <p>
+        Migrated a 3D reconstruction suite to Azure with Dockerized services and automated deep
+        learning workflows&mdash;delivering a 10× speed-up for researchers at Carl Zeiss XRM.
+      </p>
+    </article>
+    <article className="feature-card">
+      <h3>Product Velocity</h3>
+      <p>
+        Led Walmart's Quick Mods microfrontend initiative, shrinking layout publishing time from six
+        months to ten days and unlocking $200M in business impact.
+      </p>
+    </article>
+    <article className="feature-card">
+      <h3>Human-Centered Engineering</h3>
+      <p>
+        Pair rigorous ML experimentation with thoughtful UX&mdash;from EEG-based gameplay insights to
+        interactive pollution visualizations that help communities understand their environment.
+      </p>
+    </article>
+  </div>
+</section>
 
-I'm Aman Garg, an ex-Senior dev currently pursuing an MS degree at Georgia Institute of Technology in Computational Science and Engineering. My linkedin profile can be viewed [here](https://www.linkedin.com/in/amanmakesart/). My primary motivation in pursuing this interdisciplinary degree was learning scientific machine learning techniques.
+<section className="section">
+  <h2 className="section__title">What I'm focusing on</h2>
+  <ul className="pill-group">
+    <li className="pill">Scientific &amp; foundation models</li>
+    <li className="pill">Cloud-native data platforms</li>
+    <li className="pill">Design systems for analytics tools</li>
+    <li className="pill">Realtime geospatial visualizations</li>
+  </ul>
+</section>
 
-I am looking for Summer 2025 software dev/ ML internships in the US. If you have any leads for me do reach out at aman.garg@gatech.edu
+<section className="section section--timeline">
+  <h2 className="section__title">Career snapshot</h2>
+  <ol className="timeline">
+    <li className="timeline__item">
+      <span className="timeline__period">2025 &ndash; Present</span>
+      <div className="timeline__content">
+        <h3>Carl Zeiss XRM · Cloud &amp; AI Intern</h3>
+        <p>
+          Building Azure-native pipelines and productionizing denoising and reconstruction models for
+          advanced microscopy workflows.
+        </p>
+      </div>
+    </li>
+    <li className="timeline__item">
+      <span className="timeline__period">2021 &ndash; 2024</span>
+      <div className="timeline__content">
+        <h3>Walmart · Software Engineer III</h3>
+        <p>
+          Shipped microfrontends, SDKs, and React Native tooling that modernized store mapping and
+          release cadence for global retail teams.
+        </p>
+      </div>
+    </li>
+    <li className="timeline__item">
+      <span className="timeline__period">2019 &ndash; 2021</span>
+      <div className="timeline__content">
+        <h3>Siemens · Software Engineer</h3>
+        <p>
+          Delivered full-stack upgrades for Active Workspace (React, C++, MySQL) and resolved
+          high-priority incidents to keep enterprise systems online.
+        </p>
+      </div>
+    </li>
+  </ol>
+</section>
 
-This website is a home for my writing, web-projects and artwork. I write poetry, short stories and make blog posts about things I find fascinating. When not trying to make something new, I like playing chess and listening to music.
-
-This portfolio is built with **Next.js** and a library called [Nextra](https://nextra.vercel.app/). The source code for this website can be viewed [here](https://github.com/amangrg/web-portfolio).
-
----
-- GitHub [@amangrg](https://github.com/amangrg)
-- Linkedin [@amanmakesart](https://www.linkedin.com/in/amanmakesart/)
-- Email amangrg96@gmail.com
+<section className="section section--surface">
+  <div className="section__headline">
+    <h2>Let's build something remarkable</h2>
+    <p>
+      I'm exploring Summer 2025 opportunities where engineering craft, ML research, and product
+      sense come together. Reach out if you're building ambitious tools for scientists, creators, or
+      communities.
+    </p>
+  </div>
+  <a className="contact-card" href="mailto:aman.garg@gatech.edu">
+    <span className="contact-card__label">Email</span>
+    <span className="contact-card__value">aman.garg@gatech.edu</span>
+    <span className="contact-card__cta">Start a conversation →</span>
+  </a>
+</section>
