--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -6,17 +6,109 @@ date: 2021-03-19
 
 # Aman Garg
 
-Hey, welcome to my porfolio website and personal blog!
+<div className="hero">
+  <span className="hero__badge">MS CSE @ Georgia Tech · Cloud &amp; AI Intern</span>
+  <h1 className="hero__title">Aman Garg</h1>
+  <p className="hero__subtitle">
+    Experienced full-stack engineer and ML/cloud specialist with 5+ years building scalable systems and intelligent imaging workflows.
+  </p>
+  <p className="hero__copy">
+    I design end-to-end products that blend human-centered experiences with rigorous engineering—from Azure-native 3D reconstruction pipelines to high-impact retail microfrontends. Currently, I&apos;m exploring scientific machine learning at Georgia Tech while driving cloud acceleration at Carl Zeiss XRM.
+  </p>
+  <div className="hero__cta">
+    <a className="button" href="mailto:aman.garg@gatech.edu">Let&apos;s collaborate</a>
+    <a className="button button--ghost" href="/projects">Explore projects</a>
+  </div>
+  <div className="hero__links">
+    <a href="mailto:aman.garg@gatech.edu">Email</a>
+    <a href="https://amangarg.in" target="_blank" rel="noopener noreferrer">Portfolio</a>
+    <a href="https://www.linkedin.com/in/aman9ar9/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+    <a href="https://github.com/amangrg" target="_blank" rel="noopener noreferrer">GitHub</a>
+  </div>
+</div>
 
-I'm Aman Garg, an ex-Senior dev currently pursuing an MS degree at Georgia Institute of Technology in Computational Science and Engineering. My linkedin profile can be viewed [here](https://www.linkedin.com/in/amanmakesart/). My primary motivation in pursuing this interdisciplinary degree was learning scientific machine learning techniques.
+<section className="page-section">
+  <h2 className="section-title">About Me</h2>
+  <p>
+    I&apos;m a computational science graduate student at Georgia Tech focused on machine learning for scientific discovery. Before grad school, I led large-scale web initiatives at Walmart and Siemens, shipping microfrontends, SDKs, and production services that touch millions of shoppers worldwide. I thrive when I can pair data-rich systems with thoughtful design to unlock measurable business impact.
+  </p>
+  <p>
+    Across research and industry, I&apos;ve migrated imaging toolkits to Azure with a <strong>10× speedup</strong>, delivered real-time map editing experiences, and crafted recommendation engines from thousands of academic resources. I&apos;m energized by collaborative teams, generous mentorship, and the chance to translate complex ideas into intuitive, elegant products.
+  </p>
+  <div className="highlight-grid">
+    <article className="highlight-card">
+      <h3>Cloud &amp; AI Intern · Carl Zeiss XRM</h3>
+      <p>Containerized 3D reconstruction workflows on Azure VMs and automated deep-learning denoising pipelines.</p>
+    </article>
+    <article className="highlight-card">
+      <h3>Software Engineer III · Walmart</h3>
+      <p>Led the Quick Mods microfrontend program to cut layout publishing from 6 months to 10 days, contributing to a $200M revenue uplift.</p>
+    </article>
+    <article className="highlight-card">
+      <h3>IEEE BHI Finalist</h3>
+      <p>Built an interactive U.S. pollution map spotlighting environmental health disparities and civic storytelling.</p>
+    </article>
+  </div>
+</section>
 
-I am looking for Summer 2025 software dev/ ML internships in the US. If you have any leads for me do reach out at aman.garg@gatech.edu
+<section className="page-section">
+  <h2 className="section-title">Core Skills</h2>
+  <p>
+    Modern web stacks, robust ML experimentation, and cloud-native delivery pipelines are the backbone of my work. These are the tools I reach for most often.
+  </p>
+  <div className="skill-badges">
+    <span className="skill-badge">Python</span>
+    <span className="skill-badge">TypeScript</span>
+    <span className="skill-badge">React &amp; Next.js</span>
+    <span className="skill-badge">PyTorch</span>
+    <span className="skill-badge">TensorFlow</span>
+    <span className="skill-badge">Azure</span>
+    <span className="skill-badge">Docker &amp; Kubernetes</span>
+    <span className="skill-badge">CI/CD</span>
+    <span className="skill-badge">Data Visualization</span>
+    <span className="skill-badge">GraphQL &amp; REST</span>
+  </div>
+</section>
 
-This website is a home for my writing, web-projects and artwork. I write poetry, short stories and make blog posts about things I find fascinating. When not trying to make something new, I like playing chess and listening to music.
+<section className="page-section">
+  <h2 className="section-title">Recent Experience</h2>
+  <div className="experience-grid">
+    <article className="experience-card">
+      <h3>Carl Zeiss XRM</h3>
+      <span>Cloud &amp; AI Intern · 2025</span>
+      <ul>
+        <li>Re-architected AI-based 3D reconstruction pipelines on Azure to achieve a 10× performance boost.</li>
+        <li>Containerized imaging services with Docker to support microservice-style deployments.</li>
+        <li>Integrated deep-learning denoising into automated scientific workflows for researchers.</li>
+      </ul>
+    </article>
+    <article className="experience-card">
+      <h3>Walmart</h3>
+      <span>Software Engineer III · 2021 – 2024</span>
+      <ul>
+        <li>Directed the Quick Mods microfrontend rollout, cutting layout publishing time to 10 days.</li>
+        <li>Published a StoreMap embedding SDK on NPM and supported a React Native app for on-the-go updates.</li>
+        <li>Collaborated with product and design partners to launch omnichannel experiences with measurable lift.</li>
+      </ul>
+    </article>
+    <article className="experience-card">
+      <h3>Siemens</h3>
+      <span>Software Engineer · 2019 – 2021</span>
+      <ul>
+        <li>Shipped full-stack features for the Active Workspace platform across React, C++, and MySQL services.</li>
+        <li>Resolved P0 production incidents under aggressive SLAs in a globally distributed codebase.</li>
+        <li>Partnered with enterprise customers to secure multimillion-dollar contracts.</li>
+      </ul>
+    </article>
+  </div>
+</section>
 
-This portfolio is built with **Next.js** and a library called [Nextra](https://nextra.vercel.app/). The source code for this website can be viewed [here](https://github.com/amangrg/web-portfolio).
-
----
-- GitHub [@amangrg](https://github.com/amangrg)
-- Linkedin [@amanmakesart](https://www.linkedin.com/in/amanmakesart/)
-- Email amangrg96@gmail.com
+<section className="page-section">
+  <h2 className="section-title">Beyond the Resume</h2>
+  <p>
+    When I&apos;m not experimenting with neural data or polishing product flows, you&apos;ll find me writing poetry, sketching, or digging into strategy games. I care deeply about mentorship and inclusive tech communities, and I&apos;m actively seeking Summer 2025 software and ML internships in the U.S.
+  </p>
+  <p>
+    If that resonates with you, let&apos;s chat—whether it&apos;s about cloud-native science platforms, creative coding, or your next big idea.
+  </p>
+</section>
