Refine portfolio content and improve contrast

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -6,16 +6,22 @@ date: 2021-03-19
 
 <section className="hero">
   <span className="hero__badge">MS CSE @ Georgia Tech · Full-Stack Engineer</span>
-  <h1>Designing immersive digital experiences powered by data.</h1>
+  <h1>Hi, I'm Aman. I build dependable products for teams who work with data.</h1>
   <p>
-    I'm Aman Garg, a full-stack engineer and machine learning practitioner with 5+ years of
-    experience shipping resilient products across cloud, web, and AI. I build systems that feel
-    effortless for users&mdash;from microfrontends that reach millions of Walmart shoppers to deep
-    learning pipelines reconstructing 3D microscopy in the cloud.
+    I enjoy the messy middle where research, design, and shipping code overlap. I'm finishing an
+    MS in Computational Science and Engineering at Georgia Tech after five years of building
+    production systems at Walmart and Siemens. Lately I've been running cloud pipelines for 3D
+    microscopy at Carl Zeiss XRM and refining machine learning workflows that scientists use every
+    day.
   </p>
   <div className="hero__actions">
     <a className="button" href="/projects">Explore my projects</a>
-    <a className="button button--secondary" href="mailto:aman.garg@gatech.edu">Let's collaborate</a>
+    <a className="button button--secondary" href="mailto:aman.garg@gatech.edu">Email me</a>
+  </div>
+  <div className="hero__socials">
+    <span className="hero__socials-label">Find me on</span>
+    <a href="https://github.com/amangrg" rel="noopener noreferrer">GitHub</a>
+    <a href="https://www.linkedin.com/in/aman9ar9/" rel="noopener noreferrer">LinkedIn</a>
   </div>
 </section>
 
@@ -23,33 +29,37 @@ date: 2021-03-19
   <div className="section__headline">
     <h2>About Me</h2>
     <p>
-      Currently at Georgia Tech honing computational science chops, I translate research-backed
-      insights into human-centered products. Previously at Walmart and Siemens, I led engineering
-      efforts that modernized legacy ecosystems, accelerated releases from months to days, and
-      supported multimillion-dollar contracts. I thrive in interdisciplinary teams where ML models,
-      cloud architecture, and design thinking intersect to solve challenging problems.
+      My path has moved between large platforms and small research groups. At Walmart I helped a
+      cross-functional crew replace a legacy layout system with microfrontends that shipped in days
+      instead of months. At Siemens I earned my stripes handling production incidents while
+      iterating on Active Workspace. Graduate school has added more applied math and signal
+      processing to the mix, which is now showing up in my work on neural data and scientific
+      imaging.
     </p>
   </div>
   <div className="feature-grid">
     <article className="feature-card">
       <h3>Cloud &amp; AI at Scale</h3>
       <p>
-        Migrated a 3D reconstruction suite to Azure with Dockerized services and automated deep
-        learning workflows&mdash;delivering a 10× speed-up for researchers at Carl Zeiss XRM.
+        Moving an in-house 3D reconstruction toolkit to Azure meant containerizing services,
+        building Python pipelines, and tuning GPU workloads. The rework cut processing time for the
+        microscopy team from hours to minutes.
       </p>
     </article>
     <article className="feature-card">
       <h3>Product Velocity</h3>
       <p>
-        Led Walmart's Quick Mods microfrontend initiative, shrinking layout publishing time from six
-        months to ten days and unlocking $200M in business impact.
+        At Walmart I co-led Quick Mods, a project that replaced spreadsheets and manual releases
+        with TypeScript microfrontends. Store layouts now land in production within ten days, which
+        opened the door for merchandising teams to experiment.
       </p>
     </article>
     <article className="feature-card">
       <h3>Human-Centered Engineering</h3>
       <p>
-        Pair rigorous ML experimentation with thoughtful UX&mdash;from EEG-based gameplay insights to
-        interactive pollution visualizations that help communities understand their environment.
+        Whether it's decoding EEG signals or visualizing air quality, I try to ship tools that make
+        complex data approachable. Prototypes only stick when the people who need them can explore
+        and trust the results.
       </p>
     </article>
   </div>
@@ -58,7 +68,7 @@ date: 2021-03-19
 <section className="section">
   <h2 className="section__title">What I'm focusing on</h2>
   <ul className="pill-group">
-    <li className="pill">Scientific &amp; foundation models</li>
+    <li className="pill">Scientific and foundation models</li>
     <li className="pill">Cloud-native data platforms</li>
     <li className="pill">Design systems for analytics tools</li>
     <li className="pill">Realtime geospatial visualizations</li>
@@ -69,17 +79,17 @@ date: 2021-03-19
   <h2 className="section__title">Career snapshot</h2>
   <ol className="timeline">
     <li className="timeline__item">
-      <span className="timeline__period">2025 &ndash; Present</span>
+      <span className="timeline__period">2025 to Present</span>
       <div className="timeline__content">
         <h3>Carl Zeiss XRM · Cloud &amp; AI Intern</h3>
         <p>
-          Building Azure-native pipelines and productionizing denoising and reconstruction models for
-          advanced microscopy workflows.
+          Building Azure-native pipelines and preparing denoising and reconstruction models for
+          everyday use by the microscopy research team.
         </p>
       </div>
     </li>
     <li className="timeline__item">
-      <span className="timeline__period">2021 &ndash; 2024</span>
+      <span className="timeline__period">2021 to 2024</span>
       <div className="timeline__content">
         <h3>Walmart · Software Engineer III</h3>
         <p>
@@ -89,12 +99,12 @@ date: 2021-03-19
       </div>
     </li>
     <li className="timeline__item">
-      <span className="timeline__period">2019 &ndash; 2021</span>
+      <span className="timeline__period">2019 to 2021</span>
       <div className="timeline__content">
         <h3>Siemens · Software Engineer</h3>
         <p>
-          Delivered full-stack upgrades for Active Workspace (React, C++, MySQL) and resolved
-          high-priority incidents to keep enterprise systems online.
+          Delivered full-stack upgrades for Active Workspace (React, C++, MySQL) while resolving
+          high-priority incidents that kept enterprise systems online.
         </p>
       </div>
     </li>
@@ -103,11 +113,11 @@ date: 2021-03-19
 
 <section className="section section--surface">
   <div className="section__headline">
-    <h2>Let's build something remarkable</h2>
+    <h2>Next role</h2>
     <p>
-      I'm exploring Summer 2025 opportunities where engineering craft, ML research, and product
-      sense come together. Reach out if you're building ambitious tools for scientists, creators, or
-      communities.
+      I'm beginning my search for full-time software roles that start in May 2026. If you are
+      building products at the intersection of data, research, and user experience, I'd love to hear
+      from you.
     </p>
   </div>
   <a className="contact-card" href="mailto:aman.garg@gatech.edu">
