--- a/pages/projects.mdx
+++ b/pages/projects.mdx
@@ -6,10 +6,10 @@ date: 2024-06-01
 
 <section className="projects-hero">
   <span className="hero__badge">Selected Work</span>
-  <h1>Engineering stories that blend design, data, and empathy.</h1>
+  <h1>Projects that show how I approach real-world data.</h1>
   <p>
-    Here are two projects that capture how I bridge research and real-world impact&mdash;one brings air
-    quality data to communities, the other decodes brain states from neural signals.
+    Each piece started with a question. How can residents understand changing air quality? What can
+    EEG signals tell coaches about decision making? These are the experiments I'm most proud of.
   </p>
 </section>
 
@@ -20,13 +20,13 @@ date: 2024-06-01
       <h2>USA Pollution Map</h2>
     </div>
     <p>
-      Built an interactive leaflet web app that layers AQI, particulate matter, and ozone data across
-      the United States. The experience empowers residents and policy makers to explore temporal
-      trends, compare regions, and surface hotspots using intuitive filters.
+      An interactive Leaflet web app that brings AQI, particulate matter, and ozone data onto one
+      responsive map of the United States. Local organizers use it to compare regions and explain
+      what is changing to their communities.
     </p>
     <ul className="project-card__bullets">
-      <li>Implemented performant map tiling and clustering for nationwide data coverage.</li>
-      <li>Crafted responsive visual storytelling that helped the project become an IEEE BHI finalist.</li>
+      <li>Implemented custom tiling, clustering, and legends so the map stays responsive at scale.</li>
+      <li>The storytelling work led to an IEEE BHI 2024 finalist spot and invited demos.</li>
       <li>
         Tech: React, Leaflet, GeoJSON, Netlify. <a href="https://pollutionmap.netlify.app/">Live demo</a>
         · <a href="https://github.com/amangrg/pollution_map_usa">Source</a>
@@ -40,19 +40,13 @@ date: 2024-06-01
       <h2>Brain State Modeling with ARHMMs</h2>
     </div>
     <p>
-      Modeled player cognition in esports scenarios by fusing EEG signals with autoregressive hidden
-      Markov models. The pipeline uncovers state transitions that align with high-pressure in-game
-      events and reveals individualized neural signatures.
+      Modeled player cognition in esports scenarios by pairing EEG recordings with autoregressive
+      hidden Markov models. The work surfaces state transitions that line up with high-pressure game
+      moments and highlights how each player responds.
     </p>
     <ul className="project-card__bullets">
-      <li>
-        Engineered frequency-domain feature extraction (delta through gamma bands) using multi-taper
-        spectral analysis to retain discriminative patterns.
-      </li>
-      <li>
-        Evaluated ARHMM, CNN, and logistic regression baselines&mdash;achieving 81% accuracy on kill
-        event detection while highlighting subject-level variability via t-SNE explorations.
-      </li>
+      <li>Engineered frequency-domain features (delta through gamma bands) with multi-taper spectral analysis.</li>
+      <li>Benchmarked ARHMM, CNN, and logistic regression baselines and reached 81% accuracy on kill detection.</li>
       <li>
         Tech: Python, NumPy, PyTorch, scikit-learn. <a href="https://github.com/amangrg/eeg-hidden-markov-model">Research repo</a>
         · <a href="mailto:aman.garg@gatech.edu?subject=EEG%20HMM%20Collab">Request deep dive</a>
