Refresh home and projects content and styling

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -7,13 +7,13 @@ date: 2021-03-19
 # Aman Garg
 
 <div className="hero">
-  <span className="hero__badge">MS CSE @ Georgia Tech · Cloud &amp; AI Intern</span>
+  <span className="hero__badge">MS CSE @ Georgia Tech · Researcher, BRAINML Lab</span>
   <h1 className="hero__title">Aman Garg</h1>
   <p className="hero__subtitle">
-    Experienced full-stack engineer and ML/cloud specialist with 5+ years building scalable systems and intelligent imaging workflows.
+    Machine learning engineer translating neural signals and product strategy into resilient, human-centered experiences.
   </p>
   <p className="hero__copy">
-    I design end-to-end products that blend human-centered experiences with rigorous engineering—from Azure-native 3D reconstruction pipelines to high-impact retail microfrontends. Currently, I&apos;m exploring scientific machine learning at Georgia Tech while driving cloud acceleration at Carl Zeiss XRM.
+    I build end-to-end products that blend compassionate UX with rigorous engineering—from Azure-native 3D reconstruction pipelines to high-impact retail microfrontends. Now, I&apos;m advancing brain-computer interface research at Georgia Tech&apos;s <a href="https://sites.google.com/view/brainml/home" target="_blank" rel="noopener noreferrer">BRAINML Lab</a>, modeling cognitive state transitions from EEG data and crafting reproducible tooling. I&apos;m actively exploring full-time machine learning and applied research roles starting May 2026.
   </p>
   <div className="hero__cta">
     <a className="button" href="mailto:aman.garg@gatech.edu">Let&apos;s collaborate</a>
@@ -22,6 +22,7 @@ date: 2021-03-19
   <div className="hero__links">
     <a href="mailto:aman.garg@gatech.edu">Email</a>
     <a href="https://amangarg.in" target="_blank" rel="noopener noreferrer">Portfolio</a>
+    <a href="https://sites.google.com/view/brainml/home" target="_blank" rel="noopener noreferrer">BRAINML Lab</a>
     <a href="https://www.linkedin.com/in/aman9ar9/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
     <a href="https://github.com/amangrg" target="_blank" rel="noopener noreferrer">GitHub</a>
   </div>
@@ -30,15 +31,15 @@ date: 2021-03-19
 <section className="page-section">
   <h2 className="section-title">About Me</h2>
   <p>
-    I&apos;m a computational science graduate student at Georgia Tech focused on machine learning for scientific discovery. Before grad school, I led large-scale web initiatives at Walmart and Siemens, shipping microfrontends, SDKs, and production services that touch millions of shoppers worldwide. I thrive when I can pair data-rich systems with thoughtful design to unlock measurable business impact.
+    I&apos;m a computational science graduate student at Georgia Tech focused on machine learning for scientific discovery. In the BRAINML Lab, I lead EEG modeling and experiment tooling that reveal how teams collaborate under pressure. Before grad school, I led large-scale web initiatives at Walmart and Siemens, shipping microfrontends, SDKs, and production services that touched millions of shoppers worldwide.
   </p>
   <p>
-    Across research and industry, I&apos;ve migrated imaging toolkits to Azure with a <strong>10× speedup</strong>, delivered real-time map editing experiences, and crafted recommendation engines from thousands of academic resources. I&apos;m energized by collaborative teams, generous mentorship, and the chance to translate complex ideas into intuitive, elegant products.
+    Across research and industry, I&apos;ve migrated imaging toolkits to Azure with a <strong>10× speedup</strong>, delivered real-time map editing experiences, and crafted recommendation engines from thousands of academic resources. I&apos;m energized by collaborative teams, generous mentorship, and the chance to translate complex ideas into intuitive, elegant products—and I&apos;m ready to bring that energy to a full-time role in 2026.
   </p>
   <div className="highlight-grid">
     <article className="highlight-card">
-      <h3>Cloud &amp; AI Intern · Carl Zeiss XRM</h3>
-      <p>Containerized 3D reconstruction workflows on Azure VMs and automated deep-learning denoising pipelines.</p>
+      <h3>BRAINML Lab · Georgia Tech</h3>
+      <p>Modeling neural dynamics from EEG signals and building reproducible pipelines for human-machine teaming research.</p>
     </article>
     <article className="highlight-card">
       <h3>Software Engineer III · Walmart</h3>
@@ -74,12 +75,12 @@ date: 2021-03-19
   <h2 className="section-title">Recent Experience</h2>
   <div className="experience-grid">
     <article className="experience-card">
-      <h3>Carl Zeiss XRM</h3>
-      <span>Cloud &amp; AI Intern · 2025</span>
+      <h3>Georgia Tech · BRAINML Lab</h3>
+      <span>Graduate Researcher · 2024 – Present</span>
       <ul>
-        <li>Re-architected AI-based 3D reconstruction pipelines on Azure to achieve a 10× performance boost.</li>
-        <li>Containerized imaging services with Docker to support microservice-style deployments.</li>
-        <li>Integrated deep-learning denoising into automated scientific workflows for researchers.</li>
+        <li>Analyze high-density EEG datasets to model team coordination, designing pipelines that turn raw biosignals into actionable insights.</li>
+        <li>Prototype deep learning architectures for cognitive state detection and evaluate their robustness across subjects.</li>
+        <li>Build experiment automation and visualization tooling that accelerates collaboration between neuroscientists and engineers.</li>
       </ul>
     </article>
     <article className="experience-card">
@@ -106,9 +107,9 @@ date: 2021-03-19
 <section className="page-section">
   <h2 className="section-title">Beyond the Resume</h2>
   <p>
-    When I&apos;m not experimenting with neural data or polishing product flows, you&apos;ll find me writing poetry, sketching, or digging into strategy games. I care deeply about mentorship and inclusive tech communities, and I&apos;m actively seeking Summer 2025 software and ML internships in the U.S.
+    When I&apos;m not experimenting with neural data or polishing product flows, you&apos;ll find me writing poetry, sketching, or digging into strategy games. I care deeply about mentorship and inclusive tech communities, and I&apos;m actively preparing for full-time machine learning and applied research roles starting May 2026.
   </p>
   <p>
-    If that resonates with you, let&apos;s chat—whether it&apos;s about cloud-native science platforms, creative coding, or your next big idea.
+    If that resonates with you, let&apos;s chat—whether it&apos;s about cloud-native science platforms, creative coding, or the future team I can help scale next.
   </p>
 </section>
