--- a/pages/projects.mdx
+++ b/pages/projects.mdx
@@ -8,7 +8,7 @@ date: 2024-06-01
   <h1>Projects</h1>
   <p>
     A closer look at the systems, visualizations, and scientific tooling I build. Each project weaves together product intuition,
-    rigorous engineering, and thoughtful storytelling.
+    rigorous engineering, and thoughtful storytelling—including ongoing EEG research with Georgia Tech&apos;s BRAINML Lab.
   </p>
 </div>
 
@@ -76,5 +76,6 @@ date: 2024-06-01
   <p>
     I&apos;m continually iterating on these projects—deploying richer datasets, adding predictive insights, and refining storytelling.
     Have an idea or a dataset you want to bring to life? Reach out at <a href="mailto:aman.garg@gatech.edu">aman.garg@gatech.edu</a>.
+    I&apos;m also exploring full-time machine learning and applied research roles beginning May 2026.
   </p>
 </section>
