Refresh homepage content and styling

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -6,14 +6,17 @@ date: 2021-03-19
 
 # Aman Garg
 
-<div className="hero">
-  <span className="hero__badge">MS CSE @ Georgia Tech · Cloud &amp; AI Intern</span>
+<div className="hero hero--animated">
+  <span className="hero__badge">MS CSE @ Georgia Tech · BRAINML Lab Researcher</span>
   <h1 className="hero__title">Aman Garg</h1>
   <p className="hero__subtitle">
-    Experienced full-stack engineer and ML/cloud specialist with 5+ years building scalable systems and intelligent imaging workflows.
+    Computational scientist and product-minded engineer crafting neural data pipelines and joyful, resilient cloud experiences.
   </p>
   <p className="hero__copy">
-    I design end-to-end products that blend human-centered experiences with rigorous engineering—from Azure-native 3D reconstruction pipelines to high-impact retail microfrontends. Currently, I&apos;m exploring scientific machine learning at Georgia Tech while driving cloud acceleration at Carl Zeiss XRM.
+    At Georgia Tech&apos;s BRAINML Lab, I translate EEG signals into actionable biomarkers while designing systems that honor human context. Previously, I led large-scale product launches at Walmart and Siemens and accelerated scientific imaging at Carl Zeiss XRM.
+  </p>
+  <p className="hero__copy hero__copy--accent">
+    I&apos;m currently exploring full-time applied ML and product engineering roles starting in May 2026—let&apos;s build something cerebral and impactful together.
   </p>
   <div className="hero__cta">
     <a className="button" href="mailto:aman.garg@gatech.edu">Let&apos;s collaborate</a>
@@ -27,18 +30,18 @@ date: 2021-03-19
   </div>
 </div>
 
-<section className="page-section">
+<section className="page-section fade-in">
   <h2 className="section-title">About Me</h2>
   <p>
-    I&apos;m a computational science graduate student at Georgia Tech focused on machine learning for scientific discovery. Before grad school, I led large-scale web initiatives at Walmart and Siemens, shipping microfrontends, SDKs, and production services that touch millions of shoppers worldwide. I thrive when I can pair data-rich systems with thoughtful design to unlock measurable business impact.
+    I&apos;m a computational science graduate student at Georgia Tech focused on machine learning for scientific discovery and neurotechnology. In the BRAINML Lab, I collaborate with neuroscientists to decode EEG data, prototype interpretability tooling, and ship research infrastructure that scales.
   </p>
   <p>
-    Across research and industry, I&apos;ve migrated imaging toolkits to Azure with a <strong>10× speedup</strong>, delivered real-time map editing experiences, and crafted recommendation engines from thousands of academic resources. I&apos;m energized by collaborative teams, generous mentorship, and the chance to translate complex ideas into intuitive, elegant products.
+    Before grad school, I led large-scale web initiatives at Walmart and Siemens, shipping microfrontends, SDKs, and production services that touch millions of shoppers worldwide. Across research and industry, I&apos;ve migrated imaging toolkits to Azure with a <strong>10× speedup</strong>, delivered real-time map editing experiences, and crafted recommendation engines from thousands of academic resources. I thrive when I can pair data-rich systems with thoughtful design to unlock measurable impact.
   </p>
   <div className="highlight-grid">
     <article className="highlight-card">
-      <h3>Cloud &amp; AI Intern · Carl Zeiss XRM</h3>
-      <p>Containerized 3D reconstruction workflows on Azure VMs and automated deep-learning denoising pipelines.</p>
+      <h3>Researcher · BRAINML Lab</h3>
+      <p>Modeling neural attention patterns in EEG recordings and building interactive analysis tooling for scientists.</p>
     </article>
     <article className="highlight-card">
       <h3>Software Engineer III · Walmart</h3>
@@ -51,7 +54,7 @@ date: 2021-03-19
   </div>
 </section>
 
-<section className="page-section">
+<section className="page-section fade-in delay-1">
   <h2 className="section-title">Core Skills</h2>
   <p>
     Modern web stacks, robust ML experimentation, and cloud-native delivery pipelines are the backbone of my work. These are the tools I reach for most often.
@@ -70,12 +73,21 @@ date: 2021-03-19
   </div>
 </section>
 
-<section className="page-section">
+<section className="page-section fade-in delay-2">
   <h2 className="section-title">Recent Experience</h2>
   <div className="experience-grid">
     <article className="experience-card">
+      <h3>Georgia Tech · BRAINML Lab</h3>
+      <span>Graduate Researcher · 2024 – Present</span>
+      <ul>
+        <li>Analyze multi-session EEG datasets to surface biomarkers for cognitive workload and attention.</li>
+        <li>Develop interactive dashboards and signal-processing pipelines that accelerate lab experimentation.</li>
+        <li>Prototype deep learning models and interpretability workflows for real-time neuroadaptive systems.</li>
+      </ul>
+    </article>
+    <article className="experience-card">
       <h3>Carl Zeiss XRM</h3>
-      <span>Cloud &amp; AI Intern · 2025</span>
+      <span>Cloud &amp; AI Engineer · 2025</span>
       <ul>
         <li>Re-architected AI-based 3D reconstruction pipelines on Azure to achieve a 10× performance boost.</li>
         <li>Containerized imaging services with Docker to support microservice-style deployments.</li>
@@ -103,12 +115,12 @@ date: 2021-03-19
   </div>
 </section>
 
-<section className="page-section">
+<section className="page-section fade-in delay-3">
   <h2 className="section-title">Beyond the Resume</h2>
   <p>
-    When I&apos;m not experimenting with neural data or polishing product flows, you&apos;ll find me writing poetry, sketching, or digging into strategy games. I care deeply about mentorship and inclusive tech communities, and I&apos;m actively seeking Summer 2025 software and ML internships in the U.S.
+    When I&apos;m not experimenting with neural data or polishing product flows, you&apos;ll find me writing poetry, sketching, or digging into strategy games. I care deeply about mentorship and inclusive tech communities, and I&apos;m actively building teams that welcome curious collaborators.
   </p>
   <p>
-    If that resonates with you, let&apos;s chat—whether it&apos;s about cloud-native science platforms, creative coding, or your next big idea.
+    I&apos;m looking to join a mission-driven team in May 2026. If that resonates with you, let&apos;s chat—whether it&apos;s about cloud-native science platforms, neuroadaptive interfaces, or your next big idea.
   </p>
 </section>
